<resources>
    <string name="app_name">IA600</string>
    <string name="device_name" translatable="false">IA600 Smart-Check Reader</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation" translatable="false">An unexpected error occurred. We apologize for the inconvenience.</string>
    <string name="customactivityoncrash_error_activity_restart_app" translatable="false">Restart</string>
    <string name="customactivityoncrash_error_activity_close_app" translatable="false">Close program</string>
    <string name="customactivityoncrash_error_activity_error_details" translatable="false">Error Log</string>
    <string name="customactivityoncrash_error_activity_error_details_title" translatable="false">Error Details</string>
    <string name="customactivityoncrash_error_activity_error_details_close" translatable="false">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copy" translatable="false">Copy log</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label" translatable="false">error message</string>
    <string name="openserialfirst">Please open the serial port first.</string>
    <string name="login_username_hint">Please enter your username.</string>
    <string name="login_password_hint">Please enter your password.</string>
    <string name="login_cb_text">Remember account password</string>
    <string name="login">Log in</string>
    <string name="callus">Contact Us</string>
    <string name="register_online">User Registration</string>
    <string name="login_company_name">Dayuan &amp; Oasis FoodTech Ltd.</string>
    <string name="register_username">Register an account</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="name">Name</string>
    <string name="phone">Telephone</string>
    <string name="belong_units">Affiliated Unit</string>
    <string name="jobname">Position</string>
    <string name="register_now">Register now</string>
    <string name="hint_usenamenotempty">Username cannot be empty.</string>
    <string name="hint_passwordnotempty">Password cannot be empty</string>
    <string name="hint_passwordnotsample">Passwords do not match</string>
    <string name="hint_usermalesuccess">User created successfully!</string>
    <string name="hint_loginsuccess">Login successful</string>
    <string name="hint_loginfail1">Login failed, username does not exist.</string>
    <string name="hint_loginfail2">Login failed, incorrect password.</string>
    <string name="login_toast_nousername">Please enter your username!</string>
    <string name="login_toast_nopassword">Please enter your password!</string>
    <string name="hint_exit_app">Press exit program again</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="test_record">Test Records</string>
    <string name="conventional_food_safety">General Food Safety</string>
    <string name="start_test">Spectrophotometry</string>
    <string name="halal_verification">Halal Verification</string>
    <string name="pork_alcohol">Porcine</string>
    <string name="login_out">Log out</string>
    <string name="auto_upload">Automatic upload</string>
    <string name="mothod1" translatable="false">Inhibition rate method</string>
    <string name="mothod2" translatable="false">Standard curve method</string>
    <string name="mothod3" translatable="false">kinetic method</string>
    <string name="mothod4" translatable="false">Coefficient method</string>
    <string name="method_xiaoxian" translatable="false">Qualitative line elimination method</string>
    <string name="method_bise" translatable="false">Qualitative colorimetry</string>
    <string name="txt_invalid" translatable="false">Invalid</string>
    <string name="yin" translatable="false">Negative</string>
    <string name="yang" translatable="false">Positive</string>
    <string name="keyi" translatable="false">Suspicious</string>
    <string name="ok" translatable="false">Pass</string>
    <string name="ng" translatable="false">Fail</string>
    <string name="JTJ_TestMoudle_P" translatable="false">Colloidal Gold</string>
    <string name="FGGD_TestMoudle" translatable="false">Spectrophotometry</string>
    <string name="str_clear">Clear</string>
    <string name="str_adjust">Adjust</string>
    <string name="controlvalue">control value</string>
    <string name="errormesage1" translatable="false">The channel is malfunctioning; zeroing or calibration is recommended.</string>
    <string name="testproject" translatable="false">Testing items</string>
    <string name="inspectedunit" translatable="false">Inspected unit</string>
    <string name="makecontrole" translatable="false">Contrast</string>
    <string name="makesample" translatable="false">Sample</string>
    <string name="makecontrole_" translatable="false">C</string>
    <string name="makesample_" translatable="false">S</string>
    <string name="errormessage2" translatable="false">If the channel %s is abnormal, it is recommended to zero or calibrate it.</string>
    <string name="errormessage3" translatable="false">Channel %s is abnormal; the AD value for the wavelength range corresponding to the detection item selected for this channel is 0.</string>
    <string name="place_choseproject" translatable="false">Please select the test items.</string>
    <string name="doingcontrol" translatable="false">Controlled testing is underway.</string>
    <string name="samplename" translatable="false">Sample Name</string>
    <string name="method" translatable="false">Detection methods</string>
    <string name="fyy_number" translatable="false">Number of reaction drops / dilution factor</string>
    <string name="change" translatable="false">Modify</string>
    <string name="searinumber" translatable="false">serial number</string>
    <string name="edit_samplename" translatable="false">Edit Sample Name</string>
    <string name="EditorProjectActivity" translatable="false">Editing Test Items</string>
    <string name="standnum" translatable="false">Judgment basis</string>
    <string name="limitvalue" translatable="false">Limited Edition</string>
    <string name="testresult" translatable="false">Test results</string>
    <string name="result" translatable="false">Results</string>
    <string name="jujerment" translatable="false">Judgment Result</string>
    <string name="testtime" translatable="false">Detection time</string>
    <string name="testtime_" translatable="false">Time</string>
    <string name="testplace" translatable="false">Testing locations</string>
    <string name="testpeople" translatable="false">Inspectors</string>
    <string name="sampleplace" translatable="false">Sample origin</string>
    <string name="loading" translatable="false">Loading</string>
    <string name="contro_ad" translatable="false">Compare AD values</string>
    <string name="now_ad" translatable="false">Real-time AD value</string>
    <string name="transmittance" translatable="false">Light transmittance</string>
    <string name="absorbance" translatable="false">absorbance</string>
    <string name="channel_undetected_hint" translatable="false">The current channel did not detect the cuvette (the test liquid has high transmittance). Should we continue the test?</string>
    <string name="continue_testing" translatable="false">Continue testing</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="sure" translatable="false">Sure</string>
    <string name="hint" translatable="false">hint</string>
    <string name="controlled_needed_first" translatable="false">A control test is required first.</string>
    <string name="sample_testing" translatable="false">Sample testing is underway.</string>
    <string name="testinng" translatable="false">During testing！</string>
    <string name="titledetailnomore" translatable="false">Channel details</string>
    <string name="cleansuccess" translatable="false">Cleared successfully</string>
    <string name="allgalleryistesting" translatable="false">All channels are being tested.</string>
    <string name="hint_howtousermessage1" translatable="false">Please first select the corresponding test items and sample information for the test channel (the control channel defaults to the first channel with the same test items selected; for the control channel, you only need to select the test items). Then place the cuvette into the channel. After the channel color turns light blue, click the "Control" button below to start the test simultaneously.</string>
    <string name="hint_howtousermessage2" translatable="false">Please first select the corresponding test items and sample information for the test channel, and then place the cuvette into the channel. After the channel color turns light blue, click the "Sample" button below to start the test.</string>
    <string name="hint_pleaceselectgallery" translatable="false">Please select the appropriate channel first.</string>
    <string name="hint_inputsampleplace" translatable="false">Please enter the sample country of origin.</string>
    <string name="select_all">Select All</string>
    <string name="select_standard_limit">Please select the testing standard and limit value.</string>
    <string name="testing_standards">Testing standards</string>
    <string name="contrast_symbols">Contrast symbols</string>
    <string name="limit_unit">Limited quantity unit</string>
    <string name="camera_module">camera module</string>
    <string name="channel_label">Channel %1$d</string>
    <string name="no_standard_found">No suitable standard was found. Please update your local sample.</string>
    <string name="inputdirnumber" translatable="false">Please enter the dilution factor.</string>
    <string name="enter_number_reaction_drops" translatable="false">Please enter the number of reaction droplets.</string>
    <string name="seach" translatable="false">Search</string>
    <string name="newsample" translatable="false">New sample</string>
    <string name="str_number">Number</string>
    <string name="projectpassword" translatable="false">Detection item password</string>
    <string name="yure_tiem" translatable="false">Warm-up time (s)</string>
    <string name="test_time" translatable="false">Detection time (s)</string>
    <string name="unit_input" translatable="false">Unit of test value</string>
    <string name="yin_from" translatable="false">Negative range (from)</string>
    <string name="yin_to" translatable="false">Negative range (to)</string>
    <string name="yang_from" translatable="false">Positive range (from)</string>
    <string name="yang_to" translatable="false">Positive range (to)</string>
    <string name="keyi_from" translatable="false">Suspicious range (from)</string>
    <string name="keyi_to" translatable="false">Suspicious range (to)</string>
    <string name="jiaozhenga" translatable="false">Correction A</string>
    <string name="jiaozhengb" translatable="false">Correction B</string>
    <string name="use_tuise" translatable="false">Should the fading method be used?</string>
    <string name="jiaozhuna" translatable="false">Calibration curve A</string>
    <string name="jiaozhunb" translatable="false">Calibration curve B</string>
    <string name="jiaozhengc" translatable="false">Correction C</string>
    <string name="jiaozhengd" translatable="false">Correction D</string>
    <string name="new_project" translatable="false">New</string>
    <string name="input_project" translatable="false">Import</string>
    <string name="output_project" translatable="false">Export</string>
    <string name="input_data" translatable="false">Import data</string>
    <string name="output_data" translatable="false">Export data</string>
</resources>