<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new_testitem"
        android:icon="@drawable/new_icn"
        android:title="@string/new_project"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_input_testitem"
        android:icon="@drawable/input_icn"
        android:title="@string/input_project"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_output_testitem"
        android:icon="@drawable/output_icn"
        android:title="@string/output_project"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_seach"
        android:icon="@drawable/seach_icn"
        android:orderInCategory="100"
        android:title="@string/seach"
        app:showAsAction="always" />
</menu>