<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new_testitem"
        android:icon="@drawable/new_icn"
        android:title="@string/newsample"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_input_testitem"
        android:icon="@drawable/input_icn"
        android:title="@string/input_data"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_output_testitem"
        android:icon="@drawable/output_icn"
        android:title="@string/output_data"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/seach_icn"
        android:orderInCategory="100"
        android:title="@string/seach"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_updata"
        android:icon="@drawable/basedataupdata_icn"
        android:orderInCategory="100"
        android:title="@string/updata_database"
        android:visible="false"
        app:showAsAction="always" />
</menu>