<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingLeft="6dp"
    android:paddingRight="6dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.4">

        <ImageView
            android:id="@+id/retest_icn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:background="@drawable/retest_icn"
            android:visibility="gone" />

        <TextView
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/str_number"
            android:textColor="#222222"
            android:textSize="14sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/samplename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/samplename"
        android:textColor="#222222"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/testproject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/testproject"
        android:textColor="#222222"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/testresult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/testresult"
            android:textColor="#222222"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/testresult_icn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_ok" />

    </RelativeLayout>


    <TextView
        android:id="@+id/testtime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/testtime"
        android:textColor="#222222"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/Inspectedunit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:visibility="gone"
        android:text="@string/inspectedunit"
        android:textColor="#222222"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/testpeople"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:visibility="gone"
        android:text="@string/testpeople"
        android:textColor="#222222"
        android:textSize="12sp" />

    <ImageButton
        android:id="@+id/detailmessage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@null"
        android:src="@drawable/big_edtor" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/ckbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/updatamessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="" />

    </RelativeLayout>

</LinearLayout>
