<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <EditText
        android:id="@+id/dialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_4"
        android:hint="@string/projectpassword"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/dialog_no"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:background="@drawable/btn_bottom_confirm_bg"
            android:text="@string/cancel"
            android:textColor="#F80303"
            android:textSize="16sp" />

        <Button
            android:id="@+id/dialog_yes"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_bottom_confirm_bg"
            android:text="@string/sure"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>



